--- a/Source/com.avermedia.ifttt/package.html
+++ b/Source/com.avermedia.ifttt/package.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>IFTTT Webhooks Widget</title>
+    <script src="js/localization.js"></script>
     <script src="js/ax_websocket.js"></script>
     <script src="js/ax_package.js"></script>
     <script src="js/jquery.min.js"></script>
